# HardwareMonitor

./: CMakeLists.txt  REAMME.md  toolchain.cmake
src/: main.cpp
src/include/: message.h  system_info.h
src/main/: HardwareMonitor.cpp
